# medical-image-analysis-projects

./: MANIFEST.in  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_implementation.py  test_structure.py
evaluation/: __init__.py
evaluation/metrics/: __init__.py  base_metric.py  percentage_of_correct_keypoints.py
evaluation/tests/: __init__.py  test_base_metric.py  test_percentage_of_correct_keypoints.py
pnemonia_classification/: pnemonia_classification.ipynb
